# jax-flash-attn2

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  bench_llama2.py  bench_shmap.py  build.rs  setup.py  test.py  test_xmap.py
csrc/: flash_api.cu  flash_api_rust.cu  flash_bwd_launch_template.h
jax_flash_attn/: register_ops.py
python/jflash_attn/: register_ops.py
src/: ffi.rs  lib.rs
